plugins {
    id 'eclipse'
    id 'idea'
    id 'org.springframework.boot' version '2.6.6'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    // id 'war'
}

repositories {
    mavenCentral()
}

group = 'com.coders'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

dependencies {
    // Spring
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.6.6'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.6.6'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc:2.6.6'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // MyBatis
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'

    // H2
    runtimeOnly 'com.h2database:h2:2.1.212'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

// Set jar task to disabled. Because jar task is basically executed starting with spring boot plug-in version 2.5 or higher.
// Reference: https://docs.spring.io/spring-boot/docs/current/gradle-plugin/reference/htmlsingle/
tasks.named("jar") {
    enabled = false
}

tasks.named("bootRun") {
    mainClass = 'com.coders.laundry.LaundryApplication'
}

tasks.named("bootJar") {
    mainClass = 'com.coders.laundry.LaundryApplication'
}
